# rust_server_template

./: Cargo.toml  config.template.toml
src/: config.rs  logger.rs  main.rs  models.rs  utils.rs
