[package]
name = "rust_server_template"
version = "0.1.0"
edition = "2021"

[dependencies]
starknet-id = { git = "https://github.com/starknet-id/starknetid.rs", rev = "2b30c2453b96789a628c86d2edebb1023fa2e77d" }
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs", rev = "c974e5cb42e8d8344cee910b76005ec46b4dd3ed" }
axum_auto_routes = { git = "https://github.com/Th0rgal/axum_auto_routes", rev = "f9e1d2083e887cd264642359c4aa851938da6f09" }
axum = "0.6.17"
toml = "0.5.10"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4.0", features = ["cors"] }
mongodb = "2.4.0"
reqwest = "0.11.17"
async-trait = "0.1.68"
chrono = "0.4.19"
lazy_static = "1.4.0"
ctor = "0.1"
